Grok changes
************

0.14.1 (unreleased)
===================


0.14 (2008-09-29)
=================

Feature changes
---------------

* Grok now officially supports Python 2.5 and still supports Python 2.4.

* Merged the versions from the zope 3.4c7 KGS (known good set):
  http://download.zope.org/zope3.4/versions-3.4.0c7.cfg
  So we are now using the latest Zope 3 releases for all Zope packages.

Restructuring
-------------

* The ``grok.admin`` subpackage has been factored out to a separate
  package ``grokui.admin``. To have the Grok admin UI available in
  your environment, add ``grokui.admin`` to the required packages in
  the ``setup.py`` of your package.

* Removed ``grok.Skin`` baseclass in favour of a ``grok.skin(name)``
  directive that can be used on layer interfaces.  Also removed the
  ``IGrokLayer`` interface in favour of exposing ``IBrowserRequest``
  from the grok package.

* Security-related directives and helpers have been moved out to a
  ``grokcore.security`` package.

* View-related base classes, directives and grokkers have been moved
  out to a ``grokcore.view`` package.

* Form-related base classes and helpers have been moved out to a
  ``grokcore.formlib`` package.

Bug fixes
---------

* Replace zope.deprecation.tests.warn with grok.testing.warn to:

    * Make the signature identical to warnings.warn

    * To check for \*.pyc and \*.pyo files.

  When zope.deprecation is fixed this warn() function can be removed again.
  Makes all the tests pass under Python-2.5.

0.13 (2008-06-23)
=================

Restructuring
-------------

* The basic component base classes (``Adapter``, ``MultiAdapter``,
  ``GlobalUtility``), their grokkers, as well as many of the basic
  directives have been factored out to a reusable
  ``grokcore.component`` package.

* Ported directives to Martian's new directive implementation.  As a
  result, many helper functions that were available from ``grok.util``